--- a/templates/server.xml.j2
+++ b/templates/server.xml.j2
@@ -145,6 +145,20 @@
                resourceName="UserDatabase"/>
       </Realm>
 
+{% for row in domains %}
+
+	<Host name="{{row.domain_name}}"  appBase="webapps" unpackWARs="true" autoDeploy="true">
+		<Alias>www.{{row.domain_name}}</Alias>
+
+		<Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
+		   prefix="{{row.domain_name}}_access_log" suffix=".txt"
+		   pattern="%h %l %u %t %r %s %b" />
+
+		<Context path="/{{row.domain_name}}" docBase="/opt/apache-tomcat-9.0.11/webapps/{{row.domain_name}}"
+			   debug="0" reloadable="true"/>
+	</Host>
+{% endfor %}
+
       <Host name="localhost"  appBase="webapps"
             unpackWARs="true" autoDeploy="true">
 
